@@ -8,7 +8,17 @@
 /*!\file
 A simple sample of the use of the GtkCrystalViewer widget.
 */
-int main(int argc, char *argv[])
+
+/*!
+\a main function of the test program. It fulfills the following operations, in order:
+- initialize Gt and GnomeVFS;
+- loads atomic radii.
+- build the widow embedding the sample GtkCrystalViewer.
+- build the GtkCrystalViewer with either a file from the command line or the default
+nickel.gcrystal provided with the sources.
+- shows everything and enter \a gtk_main().
+*/
+int main (int argc, char *argv[])
 {
 	GtkWidget *window;
 	GtkWidget *viewer;
@@ -19,20 +29,22 @@ int main(int argc, char *argv[])
 	gcu_element_load_databases ("radii", NULL);
 
 	window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
-	gtk_window_set_title(GTK_WINDOW(window), "GtkCrystalViewer test");
-	g_signal_connect(GTK_OBJECT(window), "destroy",
-		 GTK_SIGNAL_FUNC(gtk_main_quit),
+	gtk_window_set_title (GTK_WINDOW (window), "GtkCrystalViewer test");
+	g_signal_connect (G_OBJECT (window), "destroy",
+		 G_CALLBACK (gtk_main_quit),
 		 NULL);
 
-	if (argc >= 2) filename = argv[1];
-		else filename = SRCDIR"/nickel.gcrystal";
-	xml = xmlParseFile(filename);
+	if (argc >= 2)
+		filename = argv[1];
+	else
+		filename = SRCDIR"/nickel.gcrystal";
+	xml = xmlParseFile (filename);
 	
-	viewer = gtk_crystal_viewer_new(xml->children);
-	gtk_container_add(GTK_CONTAINER(window), viewer);
-	gtk_widget_show_all(window);
+	viewer = gtk_crystal_viewer_new (xml->children);
+	gtk_container_add (GTK_CONTAINER (window), viewer);
+	gtk_widget_show_all (window);
 
-	gtk_main();
+	gtk_main ();
 	
-	return(0);
+	return 0;
 }
