@@ -1,5 +1,17 @@
 ##Text encoding: utf-8
 
+2006-12-28  Jean Bréfort  <jean.brefort@normalesup.org>
+	* gcu/gtkchem3dviewer.cc:  cleaned code.
+	* gcu/gtkchem3dviewer.h: ditto and updated API docs.
+	* gcu/gtkcomboperiodic.h: updated API docs.
+	* gcu/gtkcrystalviewer.cc: cleaned code.
+	* gcu/gtkcrystalviewer.h: ditto and updated API docs.
+	* gcu/gtkperiodic.h: updated API docs.
+	* gcu/object.h: ditto.
+	* tests/testgtkchem3dviewer.c: cleaned code and updated API docs.
+	* tests/testgtkcrystalviewer.c: ditto.
+	* tests/testgtkperiodic.c: ditto.
+
 2006-12-27  Jean Bréfort  <jean.brefort@normalesup.org>
 	* gcu/gtkperiodic.c: cleaned code.
 	* gcu/gtkperiodic.h: ditto and updated API docs.
